added html elements in index.html file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-Giovana
-About
-Graduated in geology and in the process of changing careers, living in the Dallas - Texas 
-Experience
-Worked in the Code the Dream project
-Connect 
-giovana.s.aizona@gmail.com
+<!DOCTYPE html>
+<html> 
+<head> 
+    <meta charset="UTF-8">
+    <title> Giovana </title>
+    <meta name= "description" content= "Portfolio">
+    <meta name="keywords" content="JavaScript, Portfolio, Code the Dream, Giovana Aizona">
+    <meta name= "author" content= "Giovana Aizona">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body>
+
+    <h1>ABOUT</h1>
+    <p>Graduated in geology and in the process of changing careers, living in the Dallas - Texas </p>
+    <h1>EXPERIENCE</h1>
+    <p>Working in the Code the Dream project</p>
+    <h1>CONNECT</h1>
+    <ul> 
+   <li> <p>giovana.s.aizona@gmail.com</p> </li> 
+   <li> <p>https://github.com/aizonag</p> </li>
+</ul>
+</body>
+
+ </html>
