<added html elements in index.htm file>

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <p>Working in the Code the Dream project</p>
     <h1>CONNECT</h1>
     <ul> 
-   <li> <p>giovana.s.aizona@gmail.com</p> </li> 
+   <li> <p>giovana.s.aizona@gmail.co</p> </li> 
    <li> <p>https://github.com/aizonag</p> </li>
 </ul>
 </body>
-
  </html>
