--- a/index.html
+++ b/index.html
@@ -16,10 +16,26 @@
     <p>Graduated in geology and in the process of changing careers, living in the Dallas - Texas </p>
     <h1>EXPERIENCE</h1>
     <p>Working in the Code the Dream project</p>
+    <section id ="skills">
+        <h2> SKILLS </h2>
+        <ul>
+        </ul>
+    </section>
     <h1>CONNECT</h1>
     <ul> 
-   <li> <p>giovana.s.aizona@gmail.co</p> </li> 
+   <li> <p>giovana.s.aizona@gmail.com</p> </li> 
    <li> <p>https://github.com/aizonag</p> </li>
 </ul>
+
+<footer> 
+    <div class="container"> 
+        <div class="text"> 
+            <p> &copy copyright <span id="currentYear">2023</span> Giovana 
+            </p>
+        </div>
+    </div>
+     
+</footer>
+<script> scr ="./js/index.js"  </script>
 </body>
  </html>
