--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <section id="messages">
 <h2> MESSAGES </h2>
+<button type="button">Remove</button> 
 <ul></ul>
 </section>
 <footer> 
@@ -53,6 +54,6 @@
     </div>
      
 </footer>
-<script> scr ="./js/index.js"  </script>
+<script type="text/javascript" src="./js/index.js"></script>
 </body>
  </html>
