--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <meta name="keywords" content="JavaScript, Portfolio, Code the Dream, Giovana Aizona">
     <meta name= "author" content= "Giovana Aizona">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/index.css" /> 
 
 </head>
 
 <body>
 
     <h1>ABOUT</h1>
-    <p>Graduated in geology and in the process of changing careers, living in the Dallas - Texas </p>
+    <p>Graduated in geology and in the process of changing careers, living in Dallas - Texas </p>
     <h1>EXPERIENCE</h1>
+    <div class="styleblock">
     <p>Working in the Code the Dream project</p>
+    </div>
     <section id ="skills">
-        <h2> SKILLS </h2>
+        <h2> Skills </h2>
+        <div class="styleblock2">
         <ul>
         </ul>
+    </div>
     </section>
     <h1>CONNECT</h1>
     <ul> 
@@ -28,7 +33,7 @@
 </ul>
 
 <section>
-    <h2>LEAVE A MESSAGE</h2>
+    <h2>Leave a message</h2>
     <form name="leave_message">
         <label> Name </label> 
         <br> <input type="text", name="usersName", required="true"> </br>
@@ -41,9 +46,11 @@
 </section>
 
 <section id="messages">
-<h2> MESSAGES </h2>
+<h2> Messages</h2>
 <button type="button">Remove</button> 
+<div class="styleblock3">
 <ul></ul>
+</div>
 </section>
 <footer> 
     <div class="container"> 
