--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html> 
+
 <head> 
     <meta charset="UTF-8">
     <title> Giovana </title>
@@ -7,19 +8,26 @@
     <meta name="keywords" content="JavaScript, Portfolio, Code the Dream, Giovana Aizona">
     <meta name= "author" content= "Giovana Aizona">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav>
+        <div class="logo">Giovana</div>
+        <a href="#">About</a>
+        <a href="#">Experience</a>
+        <a href="#">Connect</a>
+    </nav>1
 
     <h1>ABOUT</h1>
-    <p>Graduated in geology and in the process of changing careers, living in the Dallas - Texas </p>
+    <p>Graduated in geology and in the process of changing careers, living in Dallas - Texas </p>
     <h1>EXPERIENCE</h1>
     <p>Working in the Code the Dream project</p>
     <section id ="skills">
-        <h2> SKILLS </h2>
-        <ul>
-        </ul>
+    <h2> SKILLS </h2>
+    <ul>
+     </ul>
+    </div>
     </section>
     <h1>CONNECT</h1>
     <ul> 
@@ -33,9 +41,9 @@
         <label> Name </label> 
         <br> <input type="text", name="usersName", required="true"> </br>
         <label> Email </label>
-        <br> <input type="email", name="usersName", required="true"> </br>
+        <br> <input type="email", name="usersEmail", required="true"> </br>
         <label> Message </label>
-        <br> <textarea name="usersName", required="true"></textarea> </br>
+        <br> <textarea name="usersMessage", required="true"></textarea> </br>
         <br> <button type="submit">Submit</button> </br>
     </form>
 </section>
@@ -45,15 +53,8 @@
 <button type="button">Remove</button> 
 <ul></ul>
 </section>
-<footer> 
-    <div class="container"> 
-        <div class="text"> 
-            <p> &copy copyright <span id="currentYear">2023</span> Giovana 
-            </p>
-        </div>
-    </div>
-     
+<footer id="footer"> 
 </footer>
-<script type="text/javascript" src="./js/index.js"></script>
+<script src="./js/index.js" type="text/JavaScript"></script>
 </body>
  </html>
