--- a/index.html
+++ b/index.html
@@ -9,34 +9,62 @@
     <meta name= "author" content= "Giovana Aizona">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/index.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Condensed:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav>
-        <div class="logo">Giovana</div>
-        <a href="#">About</a>
-        <a href="#">Experience</a>
-        <a href="#">Connect</a>
-    </nav>1
+        <div class="logo">Giovana S. Aizona</div>
+        <a href="#connect">Connect</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#experience">Experience</a>
+        <a href="#about">About</a>
+       
+    </nav>
 
-    <h1>ABOUT</h1>
-    <p>Graduated in geology and in the process of changing careers, living in Dallas - Texas </p>
-    <h1>EXPERIENCE</h1>
-    <p>Working in the Code the Dream project</p>
+<div class="container"> 
+<h1> GIOVANA AIZONA </h1>
+<img src="Photokako-polaroid-nK592SNYGlTLyb8h.png" alt="Giovana photo">
+</div>
+
+<div class= "lines">
+</div>
+    <section id ="about">
+    <h2>[ABOUT]</h2>
+    <p>
+    I have a degree in geology and I am currently in the process of changing careers by adventuring into the world of coding. I am a hard working, honest and motivated person. I am always willing to learn new skills. 
+    I am able to work independently in busy environments and also within a team setting. I am flexible, reliable and I am always up for new challenges. </p>
+    <p><strong>Pronouns: </strong>she/her and they/them.</p>
+    </section>
+    <section id ="experience">
+    <h2>[EXPERIENCE]</h2>
+    <p>Current student at the Code the Dream project. Studying introduction to programming in Javascript.</p>
+    </section>
     <section id ="skills">
-    <h2> SKILLS </h2>
-    <ul>
-     </ul>
+    <h3> [SKILLS] </h3>
+    <ul> 
+    </ul>
     </div>
     </section>
-    <h1>CONNECT</h1>
+    <section id="projects">
+        <h3>[PROJECTS] </h3>
+        <ul>
+        </ul>
+        </section>
+    <section id="connect">
+    <h2>[CONNECT]</h2>
     <ul> 
    <li> <p>giovana.s.aizona@gmail.com</p> </li> 
    <li> <p>https://github.com/aizonag</p> </li>
 </ul>
+</section>
+
 
 <section>
-    <h2>LEAVE A MESSAGE</h2>
+    <h3>[LEAVE A MESSAGE]</h3>
     <form name="leave_message">
         <label> Name </label> 
         <br> <input type="text", name="usersName", required="true"> </br>
@@ -49,11 +77,11 @@
 </section>
 
 <section id="messages">
-<h2> MESSAGES </h2>
+<h2>[MESSAGES] </h2>
 <button type="button">Remove</button> 
 <ul></ul>
 </section>
-<footer id="footer"> 
+<footer id="footer">
 </footer>
 <script src="./js/index.js" type="text/JavaScript"></script>
 </body>
