--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
     <section id="connect">
     <h2>[CONNECT]</h2>
-    <div class="footer-col">
+    <div class="connect-col">
             <div class="social-links">
                 <a href="https://br.linkedin.com/in/giovana-aizona-40a23619a"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/aizonag/"><i class="fab fa-instagram"></i></a>
@@ -70,15 +70,12 @@
 </section>
 <section>
     <h3>[LEAVE A MESSAGE]</h3>
-    <h3>[LEAVE A MESSAGE]</h3>
     <form name="leave_message">
         <label> Name </label>
         <br> <input type="text", name="usersName", required="true"> </br>
         <label> Email </label>
         <br> <input type="email", name="usersEmail", required="true"> </br>
-        <br> <input type="email", name="usersEmail", required="true"> </br>
         <label> Message </label>
-        <br> <textarea name="usersMessage", required="true"></textarea> </br>
         <br> <textarea name="usersMessage", required="true"></textarea> </br>
         <br> <button type="submit">Submit</button> </br>
     </form>
@@ -88,9 +85,7 @@
 <ul></ul>
 </section>
 <footer id="footer">
-<footer id="footer">
 </footer>
-<script src="./js/index.js" type="text/JavaScript"></script>
 <script src="./js/index.js" type="text/JavaScript"></script>
 </body>
  </html>
